--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
